<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="9"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="4"
        android:layout_height="0dp"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/textViewinput"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="5dp"
            android:textSize="50sp"
            android:gravity="bottom|right"
            >

        </TextView>
        <TextView
            android:id="@+id/textViewoutput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:textSize="50sp"
            android:gravity="bottom|right"
            >

        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="4"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"

        >
        <Button
            android:layout_width="0dp"
            android:id="@+id/buttonC"
            android:text="@string/buttonC"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:textSize="30sp"
            >
        </Button>
        <Button
            android:layout_width="0dp"
            android:id="@+id/buttonPercent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:textSize="30sp"
            android:text="@string/buttonPercent">
        </Button>
        <Button
            android:id="@+id/buttonNgoac"
            android:layout_width="0dp"
            android:text="@string/buttonNgoac"
            android:textSize="25sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp">
        </Button>
        <Button
            android:layout_width="0dp"
            android:id="@+id/buttonDivision"
            android:text="@string/buttonDivision"
            android:textSize="30sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp">
        </Button>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="4"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        >
        <Button
            android:id="@+id/button7"
            android:layout_width="0dp"
            android:text="@string/button7"
            android:textSize="30sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp">
        </Button>
        <Button
            android:id="@+id/button8"
            android:layout_width="0dp"
            android:text="@string/button8"
            android:textSize="30sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp">
        </Button>
        <Button
            android:id="@+id/button9"
            android:layout_width="0dp"
            android:textSize="30sp"
            android:text="@string/button9"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp">
        </Button>
        <Button
            android:id="@+id/buttonMultiplication"
            android:layout_width="0dp"
            android:text="@string/buttonMultiplication"
            android:textSize="30sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp">
        </Button>

    </LinearLayout>
    <LinearLayout
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="4"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        >
        <Button
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:text="@string/button4"
            android:textSize="30sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            >
        </Button>
        <Button
            android:id="@+id/button5"
            android:layout_width="0dp"
            android:text="@string/button5"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:textSize="30sp">
        </Button>
        <Button
            android:id="@+id/button6"
            android:layout_width="0dp"
            android:textSize="30sp"
            android:text="@string/button6"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp">
        </Button>
        <Button
            android:id="@+id/buttonSubtraction"
            android:layout_width="0dp"
            android:text="@string/buttonSubtraction"
            android:textSize="30sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp">
        </Button>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="4"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        >
        <Button
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:text="@string/button1"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:textSize="30sp">
        </Button>
        <Button
            android:layout_width="0dp"
            android:id="@+id/button2"
            android:text="@string/button2"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:textSize="30sp">
        </Button>
        <Button
            android:layout_width="0dp"
            android:id="@+id/button3"
            android:text="@string/button3"
            android:textSize="30sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp">
        </Button>
        <Button
            android:layout_width="0dp"
            android:id="@+id/buttonAddition"
            android:text="@string/buttonAddition"
            android:textSize="30sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp">
        </Button>

    </LinearLayout>
    <LinearLayout
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="4"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        >
        <Button
            android:layout_width="0dp"
            android:id="@+id/button0"
            android:text="@string/button0"
            android:textSize="30sp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:layout_margin="5dp">
        </Button>
        <Button
            android:layout_width="0dp"
            android:id="@+id/buttonDot"
            android:textSize="30sp"
            android:text="@string/buttonDot"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp">
        </Button>
        <Button
            android:layout_width="0dp"
            android:id="@+id/buttonEqual"
            android:text="@string/buttonEqual"
            android:textSize="30sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp">
        </Button>

    </LinearLayout>

</LinearLayout>